2004-07-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: added missing files
	* src/boards/py-mod-utils.c:  updated by Yves Combe
	* src/boards/python/anim.py: updated by Yves Combe
	* src/gcompris/Makefile.am: added new svgutil.c and .h
	* src/gcompris/gameutil.c: removed all svg stuff. moved to svgutil.c
	* src/gcompris/gcompris.h: added svgutil.h
	* src/gcompris/svgutil.c: created by Yves Combe
	* src/gcompris/svgutil.h: created by Yves Combe

2004-07-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/file_selector.c: (gcompris_file_selector_save),
	(gcompris_file_selector_load), (gcompris_file_selector_stop),
	(free_stuff), (display_files), (item_event_directory),
	(item_event_file_selector): can now move up/down in directories
	* src/gcompris/gcompris.c: (gcompris_close_all_dialog): added call to close image_selector and file_selector.

2004-07-08  Olivier Samyn  <osamyn@easynet.be>

	* docs/C/python.xml: Added the new file selector API to the python binding.
	* src/boards/py-mod-gcompris.c: (pyFileSelectorCallBack),
	(py_gcompris_file_selector_load), (py_gcompris_file_selector_save),
	(py_gcompris_file_selector_stop): Added the new file selector API to the python binding.

2004-07-08  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/geography/board1_0.xml.in: -A- updated, cleaned the images, better looking maps.
	* boards/geography/board3_0.xml.in: -A-
	* boards/geography/continents/back.png: -A-
	* boards/geography/europe/europe.jpg: -A-
	* boards/geography/europe/europe.png: -A-
	* boards/geography/france_region/bourgogne.png: -A-
	* boards/geography/france_region/bretagne.png: -A-
	* boards/geography/france_region/champagne-ardenne.png: -A-
	* boards/geography/france_region/france-regions.png: -A-
	* boards/geography/france_region/franche-conte.png: -A-
	* boards/geography/france_region/languedoc-roussillon.png: -A-
	* boards/geography/france_region/limousin.png: -A-
	* boards/geography/france_region/lorraine.png: -A-